bug: fix mobile nav getting cut off in chrome

--- a/components/shared/Nav/styles.module.scss
+++ b/components/shared/Nav/styles.module.scss
@@ -11,7 +11,13 @@
   display: flex;
   align-items: center;
 
-  &.with_background {
+  &.with_background::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(white, 0.8);
     backdrop-filter: blur(8px);
   }
